	* codegen.c: Add code emission for the bitwise operations

2021-11-05  Simon Sobisch <simonsobisch@gnu.org>

	* field.c (compute_size): adjusted check to correctly catch items bigger
	  than 2 GB
	* tree.c (get_pic_number_from_str) [COB_64_BIT_POINTER]: allow up to
	  10 significant digits
	* tree.c (cb_build_picture): check for value <= INT_MAX

2021-10-23  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (process_command_line) [__TINYC__, __OS400__): early exit when
	  assembling is requested, for the testsuite with a "skip" status
	* cobc.c: removed unused aflag_set, renamed gflag_set to source_debugging
	* cobc.c (process) [__OS400__]: simplified source-debugging handling

2021-10-19  Simon Sobisch <simonsobisch@gnu.org>

	* config.def (larger-redefines): changed to support option from boolean
	  larger-redefines-ok
	* warning.def (cb_warn_larger_01_redefines): new warning for possibly
	  problematic but allowed level 01 non-external REDEFINE
	* field.c (compute_size): cater for cb_larger_redefines and
	  cb_warn_larger_01_redefines
	* codegen.c (output_display_fields, output_field_display): add validation
	  (level 88) items in commented output if COBC_GEN_DUMP_COMMENTS is active
	  including the full list of their VALUE constants

2021-10-18  Simon Sobisch <simonsobisch@gnu.org>

	* field.c (cb_build_full_field_reference): fix bug #776
	  infinite loop for FILLER definitions above KEY in OCCURS
	* field.c (copy_into_field_recursive): explicit const specification for
	  key references

2021-10-04  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_integer, output_long_integer): use
	  integer exponentiation in libcob instead of floating point
	  from libmath/math.h, fixing #702

2021-10-01  Simon Sobisch <simonsobisch@gnu.org>

	* ppparse.y, pplex.l, scanner.l: implementation of COBOL-WORDS directive
	* reserved.c, cobc.h, tree.h: added missing COBOL 202x reserved words
	  and intrinsic functions to the internal lists